Fix invalid 'align-items' value in 'container-two'

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ img {
 .container-two {
     display: flex;
     flex-direction: column;
-    align-items: space-between;
+    align-items: center;
     padding: 3% 2% 6% 2%;
     row-gap: 24px;
 }
